修改了日志页面，待后续使用好玩的api去迭代

--- a/project.config.json
+++ b/project.config.json
@@ -42,7 +42,7 @@
   },
   "compileType": "miniprogram",
   "libVersion": "2.0.4",
-  "appid": "wxd1920808527c74d0",
+  "appid": "wx7140f4654f4c8550",
   "projectname": "Acie-game",
   "debugOptions": {
     "hidedInDevtools": []
